updated create and edit loan views with correct content

--- a/app/views/loans/create_loan.erb
+++ b/app/views/loans/create_loan.erb
@@ -1,6 +1,9 @@
 
-<h2>Add a tweet</h2>
-<form action="/tweets" method="POST">
-  <p>Status: <input type="text" name="content"></p>
+<h2>Add a new loan to compare</h2>
+<form action="/loans" method="POST">
+  <p>Loan Amount: <input type="text" name="loan_amount"></p>
+  <p>Origination Fees: <input type="text" name="origination_fees"></p>
+  <p>Term of Loan(in months): <input type="text" name="loan_term"></p>
+  <p>Annual % Interest Rate: <input type="text" name="loan_amount"></p>
   <input class="btn btn-primary" type="submit" id='submit' value="submit">
 </form>
