--- a/app/views/loans/edit_loan.erb
+++ b/app/views/loans/edit_loan.erb
@@ -1,7 +1,11 @@
-<h2> Edit Tweet </h2>
+<h2>Add a new loan to compare</h2>
 
-<form method="post" action="/tweets/<%=@tweet.id%>">
+<form method="post" action="/tweets/<%=@loan.id%>">
   <input id="hidden" type="hidden" name="_method" value="PATCH">
-  <input type="text" name="content" value="<%= @tweet.content %>">
-  <input type="submit" value="submit" id='submit'>
+  <p>Loan Amount: <input type="text" name="loan_amount" value=<%= @loan.loan_face_value%>></p>
+  <% origination_fees = @loan.loan_face_value - @loan.loan_present_value %>
+  <p>Origination Fees: <input type="text" name="origination_fees"value=<%= origination_fees%>></p>
+  <p>Term of Loan(in months): <input type="text" name="loan_term"value=<%= @loan.loan_term%>></p>
+  <p>Annual % Interest Rate: <input type="text" name="annual_rate" value=<%= @loan.annual_rate%>></p>
+  <input class="btn btn-primary" type="submit" id='submit' value="submit">
 </form>
