added part of /loans route

--- a/app/views/loans/loans.erb
+++ b/app/views/loans/loans.erb
@@ -1,9 +1,12 @@
 
 <p> Welcome, <%= current_user.username %>
 <h2> Your loans and calculated monthly payments </h2>
-
-<% @loans.each do |loan| %>
-  <div>
-    <%= loan.loan_face_value %>
-  </div>
+<% if @loans == nil %>
+  <% @loans.each do |loan| %>
+    <div>
+      <%= loan.loan_face_value %>
+    </div>
+  <% end %>
+<% else%>
+ <p>Please create some loans to compare</p>
 <% end %>
