--- a/app/views/loans/create_loan.erb
+++ b/app/views/loans/create_loan.erb
@@ -4,6 +4,6 @@
   <p>Loan Amount: <input type="text" name="loan_amount"></p>
   <p>Origination Fees: <input type="text" name="origination_fees"></p>
   <p>Term of Loan(in months): <input type="text" name="loan_term"></p>
-  <p>Annual % Interest Rate: <input type="text" name="loan_amount"></p>
+  <p>Annual % Interest Rate: <input type="text" name="annual_rate"></p>
   <input class="btn btn-primary" type="submit" id='submit' value="submit">
 </form>
