--- a/app/views/loans/show_loan.erb
+++ b/app/views/loans/show_loan.erb
@@ -1,8 +1,9 @@
-<p><%= @tweet.content %>
 
-<form method="post" action="/tweets/<%=@tweet.id%>/delete">
+
+
+
+
+<form method="post" action="/loans/<%=@loan.id%>/delete">
   <input id="hidden" type="hidden" name="_method" value="DELETE">
-  <input type="submit" value="Delete Tweet">
+  <input type="submit" value="Delete Loan">
 </form>
-
-<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet </a>
