--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -2,10 +2,21 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <title></title>
   </head>
   <body>
+    <nav class="navbar navbar-inverse">
+      <div class="container-fluid">
+        <ul class="nav navbar-nav">
+          <li><a href="/loans">My Loans</a></li>
+          <li><a href="/loans/new">Add A New Loan</a></li>
+          <li><a href="/logout">Sign Out</a></li>
+        </ul>
+      </div>
+    </nav>
+
       <%= yield %>
   </body>
 </html>
