added bootstrap table to loans view and deleted and migrated db once more to get rid of invalid loan values.

--- a/app/views/loans/loans.erb
+++ b/app/views/loans/loans.erb
@@ -1,12 +1,41 @@
+<div class="col-md-10">
 
-<p> Welcome, <%= current_user.username %>
-<h2> Your loans and calculated monthly payments </h2>
-<% if @loans != nil %>
-  <% @loans.each do |loan| %>
-    <div>
-      <%= loan.loan_face_value %>
-    </div>
-  <% end %>
-<% else%>
- <p>Please create some loans to compare</p>
+</div>
+<div class="col-md-2">
+  <p> Welcome, <%= current_user.username %>
+</div>
+
+
+<div class="col-md-2">
+</div>
+<div class="col-md-8">
+  <table class="table">
+    <thead class="black white-text">
+      <tr>
+        <th scope="col">Loan Amount</th>
+        <th scope="col">Origination Fees</th>
+        <th scope="col">Annual Interest Rate</th>
+        <th scope="col">Term of Loan</th>
+        <th scope="col">Monthly Payment</th>
+        <th scope="col">Total Paid at End</th>
+      </tr>
+    </thead>
+<% @loans.each do |loan| %>
+    <tbody>
+      <tr>
+
+        <td><%= loan.loan_face_value %></td>
+        <td><%= loan.origination_fees %></td>
+        <td><%= loan.annual_rate %></td>
+        <td><%= loan.loan_term %></td>
+        <td><%= loan.monthly_payment %></td>
+        <td><%= loan.total_amount %></td>
+      </tr>
+    </tbody>
 <% end %>
+  </table>
+  </div>
+
+
+  <div class="col-md-2">
+  </div>
