--- a/app/views/loans/create_loan.erb
+++ b/app/views/loans/create_loan.erb
@@ -1,9 +1,25 @@
 
 <h2>Add a new loan to compare</h2>
+<div class="col-md-2"></div>
+<div class="col-md-8">
 <form action="/loans" method="POST">
-  <p>Loan Amount: <input type="text" name="loan_amount"></p>
-  <p>Origination Fees: <input type="text" name="origination_fees"></p>
-  <p>Term of Loan(in months): <input type="text" name="loan_term"></p>
-  <p>Annual % Interest Rate: <input type="text" name="annual_rate"></p>
+  <div class="form-group">
+    <label for="loan_amount">Loan Amount:     </label>
+    <input type="text" name="loan_amount" id="loan_amount">
+  </div>
+  <div class="form-group">
+    <label for="origination_fees">Origination Fees:</label>
+    <input type="text" name="origination_fees" id="origination_fees">
+  </div>
+  <div class="form-group">
+    <label for="loan_term">Loan Term:       </label>
+    <input type="text" name="loan_amount" id="loan_term">
+  </div>
+  <div class="form-group">
+    <label for="annual_rate">Loan Amount:     </label>
+    <input type="text" name="annual_rate" id="annual_rate">
+  </div>
   <input class="btn btn-primary" type="submit" id='submit' value="submit">
 </form>
+</div>
+<div class="col-md-2"></div>
