--- a/app/views/loans/loans.erb
+++ b/app/views/loans/loans.erb
@@ -9,7 +9,7 @@
 <div class="col-md-2">
 </div>
 <div class="col-md-8">
-  <table class="table">
+  <table class="table table-bordered">
     <thead class="black white-text">
       <tr>
         <th scope="col">Loan Amount</th>
