updated @loan definition within post loans route to avoid dividing by zero, updated create loan erb

--- a/app/views/loans/create_loan.erb
+++ b/app/views/loans/create_loan.erb
@@ -13,10 +13,10 @@
   </div>
   <div class="form-group">
     <label for="loan_term">Loan Term:       </label>
-    <input type="text" name="loan_amount" id="loan_term">
+    <input type="text" name="loan_term" id="loan_term">
   </div>
   <div class="form-group">
-    <label for="annual_rate">Loan Amount:     </label>
+    <label for="annual_rate">Annual Rate:     </label>
     <input type="text" name="annual_rate" id="annual_rate">
   </div>
   <input class="btn btn-primary" type="submit" id='submit' value="submit">
