changed data type from int to float and migrated again as div 0 was breaking the loan methods

--- a/app/views/loans/create_loan.erb
+++ b/app/views/loans/create_loan.erb
@@ -8,8 +8,8 @@
     <input type="text" name="loan_amount" id="loan_amount">
   </div>
   <div class="form-group">
-    <label for="origination_fees">Origination Fees:</label>
-    <input type="text" name="origination_fees" id="origination_fees">
+    <label for="present_value">Amount Received:</label>
+    <input type="text" name="present_value" id="present_value">
   </div>
   <div class="form-group">
     <label for="loan_term">Loan Term:       </label>
