--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -7,6 +7,7 @@
     <title></title>
   </head>
   <body>
+    <% if logged_in? %>
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <ul class="nav navbar-nav">
@@ -16,6 +17,7 @@
         </ul>
       </div>
     </nav>
+    <% end %>
 
       <%= yield %>
   </body>
