updated show loan view to include loan data. calcs appear wrong for monthly paymnent and total

--- a/app/views/loans/show_loan.erb
+++ b/app/views/loans/show_loan.erb
@@ -1,5 +1,43 @@
 
 
+<div class="col-md-2">
+</div>
+<div class="col-md-8">
+  <table class="table table-bordered">
+    <thead class="black white-text">
+      <tr>
+        <th scope="col">Loan Amount</th>
+        <th scope="col">Origination Fees</th>
+        <th scope="col">Annual Interest Rate</th>
+        <th scope="col">Term of Loan</th>
+        <th scope="col">Monthly Payment</th>
+        <th scope="col">Total Paid at End</th>
+        <th scope="col"></th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <tr>
+
+        <td><%= @loan.loan_face_value %></td>
+        <td><%= @loan.origination_fees %></td>
+        <td><%= @loan.annual_rate %></td>
+        <td><%= @loan.loan_term %></td>
+        <td><%= @loan.monthly_payment %></td>
+        <td><%= @loan.total_amount %></td>
+        <td><a href="/loans/<%=@loan.id%>/edit">edit loan</a></td>
+      </tr>
+    </tbody>
+
+  </table>
+  </div>
+
+
+  <div class="col-md-2">
+  </div>
+
+
+
 
 
 
