--- a/app/views/loans/loans.erb
+++ b/app/views/loans/loans.erb
@@ -18,6 +18,7 @@
         <th scope="col">Monthly Payment</th>
         <th scope="col">Total Paid at End</th>
         <th scope="col"></th>
+        <th scope="col"></th>
       </tr>
     </thead>
 <% @loans.each do |loan| %>
@@ -29,7 +30,12 @@
         <td><%= loan.loan_term %></td>
         <td><%= loan.monthly_payment %></td>
         <td><%= loan.total_amount %></td>
-        <td><a href="/loans/<%=loan.id%>/edit">edit loan</a></td>
+        <td><a href="/loans/<%=loan.id%>/edit">edit</a></td>
+        <td><form method="post" action="/loans/<%=loan.id%>/delete">
+          <input id="hidden" type="hidden" name="_method" value="DELETE">
+          <input type="submit" value="Delete Loan">
+        </form>
+</td>
       </tr>
     </tbody>
 <% end %>
