--- a/app/views/loans/create_loan.erb
+++ b/app/views/loans/create_loan.erb
@@ -4,15 +4,19 @@
 <div class="col-md-8">
 <form action="/loans" method="POST">
   <div class="form-group">
+    <label for="lender">Name of Lender:     </label>
+    <input type="text" name="lender" id="lender">
+  </div>
+  <div class="form-group">
     <label for="loan_amount">Loan Amount:     </label>
     <input type="text" name="loan_amount" id="loan_amount">
   </div>
   <div class="form-group">
-    <label for="loan_term">Loan Term:       </label>
+    <label for="loan_term">Loan Term(# Months):       </label>
     <input type="text" name="loan_term" id="loan_term">
   </div>
   <div class="form-group">
-    <label for="annual_rate">Annual Rate:     </label>
+    <label for="annual_rate">Annual Rate(%):     </label>
     <input type="text" name="annual_rate" id="annual_rate">
   </div>
   <input class="btn btn-primary" type="submit" id='submit' value="submit">
