rounded /loans view calculated figures to two decimal places

--- a/app/views/loans/loans.erb
+++ b/app/views/loans/loans.erb
@@ -29,8 +29,8 @@
         <td><%= loan.loan_face_value %></td>
         <td><%= loan.annual_rate %></td>
         <td><%= loan.loan_term %></td>
-        <td><%= loan.monthly_payment %></td>
-        <td><%= loan.total_amount %></td>
+        <td><%= loan.monthly_payment.round(2) %></td>
+        <td><%= loan.total_amount.round(2) %></td>
         <td><a href="/loans/<%=loan.id%>/edit">edit</a></td>
         <td><form method="post" action="/loans/<%=loan.id%>/delete">
           <input id="hidden" type="hidden" name="_method" value="DELETE">
