removed flash message from controller- to focus on later after tests work

--- a/app/views/loans/loans.erb
+++ b/app/views/loans/loans.erb
@@ -14,7 +14,7 @@
       <tr>
         <th scope="col">Lender</th>
         <th scope="col">Loan Amount</th>
-        <th scope="col">Annual Interest Rate</th>
+        <th scope="col">Annual Interest Rate(%)</th>
         <th scope="col">Term of Loan</th>
         <th scope="col">Monthly Payment</th>
         <th scope="col">Total Paid at End</th>
