--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -5,3 +5,6 @@
   <p>Password: <input type="text" name="password"></p>
   <input class="btn btn-primary" type="submit" id='submit'>
 </form>
+<% if flash.has?(:message) %>
+  <%= flash[:message] %>
+<% end %>
